--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%svelte.assets%/favicon.png" />
 	<link rel="stylesheet" href="%svelte.assets%/app.css" />
+	<link rel="manifest" href="%svelte.assets%/manifest.json" crossorigin="use-credentials" />
+	<title>20-week training schedule for your first marathon</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%svelte.head%
 </head>
