feat: add new meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,10 @@
 	<link rel="manifest" href="%svelte.assets%/manifest.json" crossorigin="use-credentials" />
 	<title>20-week training schedule for your first marathon</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="description" content="20-week training schedule for your first marathon" />
+	<meta name="keywords" content="20-week training schedule for your first marathon" />
 	%svelte.head%
 </head>
 
